# bgablog

./: .gitignore  LICENSE.txt  README.md  manage.py  pyproject.toml
bgablog/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  decorators.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_published_alter_post_publish_and_more.py  0004_alter_category_published_alter_post_publish_comment_and_more.py  0005_post_tags_alter_category_published_and_more.py  0006_category_author_alter_category_published_and_more.py  0007_category_image_post_image_alter_category_published_and_more.py  0008_alter_category_image_alter_category_published_and_more.py  0009_post_subtitle_alter_category_published_and_more.py  0010_alter_category_published_alter_post_publish_and_more.py  0011_alter_category_published_alter_comment_body_and_more.py  0012_alter_category_published_alter_post_publish.py  0013_rename_slug_category_category_slug_and_more.py  0014_alter_category_published_alter_post_publish.py
blog/static/css/: blog.css
blog/templatetags/: blog_tags.py
templates/: base.html
templates/includes/: comment_form.html  footer.html  messaging.html  nav.html  pagination.html  text-header.html
templates/socialaccount/: authentication_error.html
templates/users/: login.html  logout.html  password_reset.html  password_reset_confirm.html  profile.html  register.html  reset_password_email.html  template_activate_account.html
users/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
(+15 files in other folders)
